# MonkeyBones

./: LICENSE  README.md  TODO.MD  example.ipynb  main.py  prune_model.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
aemotrics/: __init__.py  __main__.py  _draw.py  _geometries.py  _gui_utils.py  _points.py  _utils.py  aemotrics.py  analysis.py  cropper.py  reanalyze.py  viewer.py
aemotrics/_tests/: test_analyze.py  test_data.py  test_geometries.py  test_utils.py
microservice/: Dockerfile  aemotrics_service.py  build_and_run.sh
