[metadata]
name = aemotrics
author = Nat Adamian and Louis Adamian
author_email = ladamian@meei.harvard.edu
description = Analysis of lateral facial palsy using DeepLabCut
long_description = file: README.md
long_description_content_type = text/markdownclassifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
url = https://github.com/SurgicalPhotonics/aemotrics

[options]
packages = find:
python_requires = >=3.7
package_dir=
    =.
setup_requires = setuptools_scm

install_requires =
    dlc-generic-analysis>=0.0.1rc7
    numpy>=1.21.0
    opencv-python-headless>=4.5.4.60
    matplotlib>=3.5.0
    pandas>=1.3.4
    scipy>=1.7.3
    Shapely>=1.8.0
    circle_fit>=0.1.3

[options.extras_require]
gui =
    dlc-generic-analysis[gui]>=0.0.1rc5
    napari>=0.4.14
[options.entry_points]
console_scripts =
    aemotrics = aemotrics:__main__